updated to latest Zeal 8bit OS with strutils

--- a/examples/z88dk-z80asm/Makefile
+++ b/examples/z88dk-z80asm/Makefile
@@ -6,20 +6,21 @@
 SHELL := /bin/bash
 ASM_LIB_DIR = ../../lib
 ASM_LIB_FILE = $(ASM_LIB_DIR)/zealline.lib
+STRUTILS_LIB_FILE = $(ZOS_PATH)/kernel_headers/z88dk-z80asm/lib/strutils.lib
 
 ifndef ZOS_PATH
 $(error "Please define ZOS_PATH environment variable. It must point to Zeal 8-bit OS source code path.")
 endif
 
 ASM = z88dk-z80asm
-ASMFLAGS := -mz80 -I$(ZOS_PATH)/kernel_headers/z88dk-z80asm  -I$(ASM_LIB_DIR)
+ASMFLAGS := -mz80 -I$(ZOS_PATH)/kernel_headers/z88dk-z80asm -I$(ZOS_PATH)/kernel_headers/z88dk-z80asm/include -I$(ASM_LIB_DIR)
 
 .PHONY: all clean cleanal
 
 all: shell.bin
 
 shell.bin:
-	$(ASM) $(ASMFLAGS) -l$(ASM_LIB_FILE) -b shell.asm -oshell.bin
+	$(ASM) $(ASMFLAGS) -l$(ASM_LIB_FILE) -l$(STRUTILS_LIB_FILE) -b shell.asm -oshell.bin
 
 clean:
 	rm -rf shell.bin shell.o
